# eval-suite

./: .gitignore  CONTRIBUTING.md  README-CN.md  README.md  main.py  pyproject.toml  test.py
doc/: metric.md  overview.md  statistics.md
doc/tutorial/: thinking_token.md
docs/: item.md  metric.md  pref.md  prompt.md  robust.md
eval_suite/: __init__.py  command.py  exception.py
eval_suite/benchmark/: __init__.py  base.py  cache.py  config.py  executor.py  result.py  schema.py  stat.py  utils.py
eval_suite/benchmark/metric/: bleu.md  bleu.py  g_passk.py  llm_judge.py  majk.py  pass_k.md  pass_k.py  passk.py  score.py
eval_suite/benchmark/metric/auto/: base.py
eval_suite/benchmark/stat/: _base.py  auto.py  score.py
eval_suite/client/: __init__.py  base.py  config.py  dummy.py  openai.py  sglang.py  transformer.py  utils.py  vllm.py
eval_suite/metric/: __init__.py  base.py  config.py  result.py  schema.py
eval_suite/utils/: extract.py  template.py
eval_suite_kit/metrics/: bleu.py  llm_judge.py  pass_k.py  score.py
eval_suite_kit/metrics/auto/: __init__.py  base.py
examples/: bleu.py  chat_template.py  composition.py  extend_existing_metric.py  humaneval.py  pass_k.py  simpleqa.py  thinking_token.py  verilogeval.py
examples/live_code_bench/: live_code_bench.py
examples/templates/: humaneval.j2
tests/utils/: test_extract.py
